--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@types/node": "^20.12.11",
+    "dotenv": "^16.4.5"
+  }
 }
